--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Primeiro projeto com node e express",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js localhost 3333"
+    "dev": "nodemon --env-file=.env src/index.js localhost 3333"
   },
   "type": "module",
   "keywords": [],
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
